# mirea-schedule-telegram-bot

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
schedule_bot/: bot.py
schedule_bot/models/: lesson.py
schedule_bot/service/: take_schedule.py  take_week.py
schedule_bot/utils/: build_schedule_message.py  env.py  parse_schedule.py
